--- a/appsettings.json
+++ b/appsettings.json
@@ -1,6 +1,7 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=DANI;Database=BooksRazorApp;Trusted_Connection=True;MultipleActiveResultSets=True;"
+    //"DefaultConnection": "Server=DANI;Database=BooksRazorApp;Trusted_Connection=True;MultipleActiveResultSets=True;"
+    "DefaultConnection": "Server=(LocalDb)\\MSSQLLocalDB;Database=BooksRazorApp;Trusted_Connection=True;MultipleActiveResultSets=True;"
   },
   "Logging": {
     "LogLevel": {
